manifests/helloweb-service-static-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: samplefbweb
  labels:
    app: samplefb
spec:
  selector:
    app: samplefb
    tier: web
  ports:
  - port: 80
    targetPort: 8080
  type: LoadBalancer
  loadBalancerIP: "YOUR.IP.ADDRESS.HERE"
