manifests/helloweb-ingress-static-ip.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: samplefbweb
  annotations:
    kubernetes.io/ingress.global-static-ip-name: samplefbweb-ip
  labels:
    app: samplefb
spec:
  backend:
    serviceName: samplefbweb-backend
    servicePort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: samplefbweb-backend
  labels:
    app: samplefb
spec:
  type: NodePort
  selector:
    app: samplefb
    tier: web
  ports:
  - port: 8080
    targetPort: 8080
